# tg-bot-vpn

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  workflow.yml
docs/: DEV.md
scripts/: deploy.sh  init.sh
src/: database.py  main.py  server.py  wireguard.py
